fix: исправить высоту карточки и gap

--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,5 +1,6 @@
 .cards__item {
   position: relative;
+  font-size: 0;
   background-color: var(--color-white);
   border-radius: 10px;
   overflow: hidden;
