--- a/blocks/cards/__list/cards__list.css
+++ b/blocks/cards/__list/cards__list.css
@@ -3,7 +3,7 @@
   padding: 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-  column-gap: 17px;
-  row-gap: 20px;
+  grid-template-rows: 361px;
+  gap: 20px 17px;
   list-style: none;
 }
