--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -1,11 +1,11 @@
 .cards__title {
   margin: 0 63px 0 21px;
-  padding: 25px 0 24px 0;
+  padding: 0;
   color: var(--color-black);
   font-size: 24px;
-  line-height: 29px;
+  line-height: 79px;
   font-weight: 900;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis
+  text-overflow: ellipsis;
 }
